# smsbot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yaml  config-example.ini  pyproject.toml  requirements.txt  setup.cfg  smsbot.py
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: build-container.yaml  lint.yaml  release-chart.yaml  release.yaml  tests.yaml
charts/smsbot/: Chart.yaml  values.yaml
charts/smsbot/ci/: ct-values.yaml
docs/examples/: README.md  config-example.ini  flux-helmrelease.yaml
smsbot/: __init__.py  __main__.py  cli.py  telegram.py  utils.py  webhook.py  webhook_handler.py
smsbot/utils/: __init__.py  twilio.py
tests/: test_basic.py  test_utils.py
