[project]
name = "smsbot"
version = "0.0.6"
description = "A simple Telegram bot to receive SMS messages."
authors = [{ name = "Andrew Williams", email = "andy@tensixtyone.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "flask>=3.1.0,<4.0.0",
    "waitress>=3.0.2,<4.0.0",
    "twilio>=9.4.6,<10.0.0",
    "python-telegram-bot<20",
    "prometheus-client>=0.21.1,<0.22.0",
]

[project.scripts]
smsbot = "smsbot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "pytest-mock>=3.12.0",
    "pytest-flask>=1.3.0",
]
github = [
    "pytest-github-actions-annotate-failures>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
