[project]
name = "smsbot"
version = "0.1.1"
description = "A simple Telegram bot to receive SMS messages."
authors = [{ name = "Andrew Williams", email = "andy@tensixtyone.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "flask[async]>=3.1.1",
    "prometheus-async>=25.1.0",
    "prometheus-client>=0.22.1",
    "python-telegram-bot>=22.3",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
smsbot = "smsbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.9",
]
github = ["pytest-github-actions-annotate-failures>=0.3.0"]
