[metadata]
name = smsbot
version = 0.0.1
description = A simple Telegram bot fo receive SMS messages.
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = smsbot
install_requires =
    flask
    waitress
    twilio
    python-telegram-bot

[options.entry_points]
console_scripts =
        smsbot = smsbot:main

[flake8]
format = wemake
ignore = E501,D,WPS226,WPS110, WPS210,WPS231,WPS202
max-line-length = 120
exclude = setup.py

[darglint]
docstring_style=sphinx
