[metadata]
name = smsbot
version = 0.0.1
description = A simple Telegram bot to receive SMS messages.
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = smsbot
install_requires =
    flask
    waitress
    twilio
    python-telegram-bot

[options.entry_points]
console_scripts =
        smsbot = smsbot:main

[flake8]
format = wemake
ignore = D,E501,WPS432,WPS323,WPS2,S104,WPS412
max-line-length = 120
exclude = setup.py,env,build

[darglint]
docstring_style=sphinx
